inter-comm-ku8/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-spring-gradle-deployment1
  labels:
    app: spring-label1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-label1
  template:
    metadata:
      labels:
        app: spring-label1
    spec:
      containers:
      - name: docker-spring-gradle2
        image: ashurana31/springboot-docker-maven:springboot-helloworld
        ports:
        - containerPort: 8080
