inter-comm-ku8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-spring-gradle-service1
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: spring-label
