inter-comm-ku8/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-spring-gradle-service
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: spring-label1
