inter-comm-ku8/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-docker-gradle1
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: spring-docker-gradle-microone.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-spring-gradle-service1
          servicePort: 8080
---
